# transformer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: docs.yml
config/: transformer_config.json
data/: training_pairs.txt  validation_pairs.txt
data/tiktoken_data/: build_custom_vocab.py  cl100k_base.merges  cl100k_base.merges.json  cl100k_base.vocab.json  custom.vocab  download_gpt2_files.py
docs/html/: README_8md.html  annotated.html  attention_8cpp.html  attention_8cpp_source.html  attention_8hpp.html  attention_8hpp_source.html  attention__kernels_8cu.html  attention__kernels_8cu_source.html  attention__kernels_8cuh.html  attention__kernels_8cuh_source.html  backward__kernels_8cu.html  backward__kernels_8cu_source.html  backward__kernels_8cuh.html  backward__kernels_8cuh_source.html  beam__search_8cpp.html  beam__search_8cpp_source.html  beam__search_8hpp.html  beam__search_8hpp_source.html  cache_8cpp.html  cache_8cpp_source.html  cache_8hpp.html  cache_8hpp_source.html  cache__types_8hpp.html  cache__types_8hpp_source.html  classAttentionMask-members.html  classAttentionMask.html  classBeamSearch-members.html  classBeamSearch.html  classCudaManager-members.html  classCudaManager.html  classCudaMatrix-members.html  classCudaMatrix.html  classDropout-members.html  classDropout.html  classFeedForward-members.html  classFeedForward.html  classGradientCheckpoint-members.html  classGradientCheckpoint.html  classGroupedQueryAttention-members.html  classGroupedQueryAttention.html  (+319 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+80 more)
include/: attention.hpp  base_tokenizer.hpp  beam_search.hpp  cache.hpp  components.hpp  config.hpp  count_vocabulary.hpp  cuda_kernels.hpp  cuda_manager.hpp  cuda_utils.hpp  data_augmentation.hpp  dropout.hpp  embeddings.hpp  feed_forward.hpp  gqa.hpp  gradient_checkpoint.hpp  gradient_tape.hpp  half_precision.hpp  hyperparameter_tuner.hpp  layer_norm.hpp  layernorm.hpp  lm_head.hpp  logger.hpp  main.hpp  matrix.hpp  memory_pool.hpp  model_saver.hpp  optimizer.hpp  performance_metrics.hpp  phrase_analysis.hpp  phrase_types.hpp  preprocessing.hpp  quantization.hpp  sentencepiece_tokenizer.hpp  serialization.hpp  serialization_registration.hpp  tensor.hpp  text_analysis.hpp  tiktoken_tokenizer.hpp  token_constants.hpp  (+9 more)
include/attention/: advanced_attention.hpp  block_sparse.hpp  sliding_window_attention.hpp
include/cuda/: attention_kernels.cuh  attention_ops.cuh  backward_kernels.cuh  backward_ops.cuh  beam_search_ops.cuh  cublas_check.cuh  cuda_check.cuh  cuda_init.cuh  cuda_launch.cuh  cuda_utils.cuh  cuda_utils_impl.cuh  feed_forward_kernels.cuh  gqa_kernels.cuh  half_precision_kernels.cuh  kernel_declarations.cuh  kernel_traits.cuh  kernel_traits_def.cuh  layernorm_kernels.cuh  matrix_ops.cuh  memory_manager.cuh  quantization_kernels.cuh  tokenizer_kernels.cuh
include/optimizer/: advanced_optimizer.hpp  optimizer.hpp  sam.hpp
include/training/: dynamic_loss_scaler.hpp  gradient_manager.hpp  learning_rate_scheduler.hpp  loss_tracker.hpp  pipeline.hpp  training.hpp  training_metrics.hpp  training_monitor.hpp  training_state_manager.hpp
include/utils/: cache_types.hpp  tensor_cache.hpp
scripts/: generate_gpt2_tiktoken.py  update_validation_delimiters.py
src/: attention.cpp  attention_impl.cpp  attention_mask.cpp  beam_search.cpp  cache.cpp  components.cpp  config.cpp  count_vocabulary.cpp  cuda_manager.cpp  data_augmentation.cpp  embeddings.cpp  feed_forward.cpp  gqa.cpp  gradient_checkpoint.cpp  gradient_tape.cpp  half_precision.cpp  hyperparameter_config.cpp  hyperparameter_tuner.cpp  layer_norm.cpp  layernorm.cpp  lm_head.cpp  logger.cpp  main.cpp  matrix.cpp  matrix_ops.cpp  memory_pool.cpp  model_saver.cpp  optimizer.cpp  performance_metrics.cpp  phrase_analysis.cpp  quantization.cpp  sentencepiece_tokenizer.cpp  serialization.cpp  tensor.cpp  text_analysis.cpp  tiktoken_tokenizer.cpp  tokenizer.cpp  trainer.cpp  transformer.cpp  transformer_layer.cpp  (+5 more)
src/attention/: advanced_attention.cpp  block_sparse.cpp
src/cuda/: attention_kernels.cu  attention_ops.cu  backward_kernels.cu  backward_ops.cu  beam_search_ops.cu  cuda_init.cu  cuda_kernels.cu  cuda_launch.cpp  cuda_utils.cpp  cuda_utils.cu  feed_forward_cuda.cu  feed_forward_kernels.cu  gqa_kernels.cu  half_precision_kernels.cu  layernorm_cuda.cu  layernorm_kernels.cu  lm_head_kernels.cu  matrix_ops.cu  quantization_kernels.cu  token_embedding_cuda.cu  tokenizer_kernels.cu
src/optimizer/: sam.cpp
src/training/: gradient_manager.cpp  learning_rate_scheduler.cpp  loss_tracker.cpp  loss_tracker.hpp  training_monitor.cpp  training_state_manager.cpp
tiktoken_data/: cl100k_base.merges  cl100k_base.vocab
